--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.1.9",
     "next": "9.5.5",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-svg": "^11.2.3"
   }
 }
