--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "next": "^12.2.2",
+    "eslint-config-next": "^13.1.1",
+    "next": "^13.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-svg": "^15.1.2"
