--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "eslint-config-next": "^13.1.1",
     "next": "^13.1.1",
+    "next-seo": "^5.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-svg": "^15.1.2"
