Add new content and updates across various posts and pages
- Create a central node for the darkfrets alias with links to social media and blog categories.
- Publish a post announcing the release of the single "Killware" and details about the upcoming EP.
- Share a list of 12 albums that shaped my music taste during formative years.
- Reflect on the experience of using Safari as a default browser and switching back to Arc.
- Discuss considerations for switching back to Linux after years in the Apple ecosystem.
- Document the journey of embracing the Apple ecosystem for improved workflow and convenience.
- Enhance dotfiles management with new tools for automation and security.
- Announce the completion of mixing and mastering for the first EP.
- Introduce a new Micro.blog plugin for embedding Instagram posts.
- List personal top 10 movies of all time.
- Release announcement for the first album "Edge Protocol" with streaming links.
- Update the "Starting Without a Plan" post with new metadata.
- Pay tribute to Ozzy Osbourne following his passing.
- Add a subscription page for blog updates via RSS.
- Update configuration for Hugo site, including menu changes and RSS feed settings.

--- a/hugo.toml
+++ b/hugo.toml
@@ -26,8 +26,7 @@ ShowToc = true
 ShowAllPagesInArchive = true
 ShowRssButtonInSectionTermList = true
 ShowPageNums = true
-
-# highlightStyle = 'monokai'
+highlightStyle = 'github'
 
 [languages.en]
 languageName = "English"
@@ -49,8 +48,8 @@ url = "search/"
 weight = 10
 
 [[languages.en.menu.main]]
-name = "Tags"
-url = "tags/"
+name = "Categories"
+url = "categories/"
 weight = 10
 
 # [[languages.en.menu.main]]
@@ -85,5 +84,20 @@ url = "https://x.com/ricardodantas"
 name = "email"
 url = "mailto:me@ricardodantas.me"
 
+[outputFormats.rss]
+baseName = 'feed'
+# isHTML = false
+# isPlainText = false
+# mediaType = 'application/rss+xml'
+# noUgly = true
+# notAlternative = false
+# path = ''
+# permalinkable = false
+# protocol = ''
+# rel = 'alternate'
+# root = false
+# ugly = false
+# weight = 0
+
 [outputs]
-home = ["HTML", "RSS", "JSON"] # necessary for search
+home = ["HTML", "RSS", "JSON"]
