Update share buttons configuration and add BlueSky sharing option

--- a/hugo.toml
+++ b/hugo.toml
@@ -17,7 +17,7 @@ author = 'Ricardo Dantas'
 description = "Software developer. Guitar player. Music maker. Writing about tech, life, music and whatever else I'm thinking about."
 showReadingTime = true
 defaultContentLanguage = 'en'
-ShowShareButtons = true
+ShowShareButtons = false
 dateFormat = 'January 2, 2006'
 ShowBreadCrumbs = false
 ShowPostNavLinks = true
