--- a/hugo.toml
+++ b/hugo.toml
@@ -77,6 +77,10 @@ name = "bluesky"
 url = "https://bsky.app/profile/ricardodantas.me"
 
 [[params.socialIcons]]
+name = "x"
+url = "https://x.com/ricardodantas"
+
+[[params.socialIcons]]
 name = "email"
 url = "mailto:me@ricardodantas.me"
 
