feat: add Projects page
- New /projects/ page listing all open-source projects
- Added to main navigation menu
- Includes Feedo, Hazelnut, Tickit, ratatui-themes, DarkFrets
- Easy to extend with more projects in the future

--- a/hugo.toml
+++ b/hugo.toml
@@ -38,6 +38,11 @@ tag = "tags"
 series = "series"
 
 [[languages.en.menu.main]]
+name = "Projects"
+url = "projects/"
+weight = 3
+
+[[languages.en.menu.main]]
 name = "Archive"
 url = "archives"
 weight = 5
