feat: add profile photo as favicon and header logo
- Circular profile image in header nav (30px, next to name)
- Favicon in multiple sizes (16, 32, 180, 192, 512)
- favicon.ico for legacy browsers

--- a/hugo.toml
+++ b/hugo.toml
@@ -28,6 +28,10 @@ ShowRssButtonInSectionTermList = true
 ShowPageNums = true
 highlightStyle = 'github'
 
+[params.label]
+icon = "images/profile.png"
+iconHeight = 30
+
 [languages.en]
 languageName = "English"
 weight = 1
